# NeuroLink

./: .gitignore  PROJECT_PROGRESS.md  README.md
config/: social_adapter_profiles.json
neuro_cli/: README.md  requirements.txt
neuro_unit/: .clang-format  CMakeLists.txt  Kconfig  README.md  prj.conf
neuro_unit/boards/: dnesp32s3b_esp32s3_procpu.conf  dnesp32s3b_esp32s3_procpu.overlay
neuro_unit/include/: neuro_app_callback_bridge.h  neuro_app_command_registry.h  neuro_artifact_store.h  neuro_lease_manager.h  neuro_network_manager.h  neuro_protocol.h  neuro_protocol_codec.h  neuro_protocol_codec_cbor.h  neuro_recovery_seed_store.h  neuro_request_envelope.h  neuro_request_policy.h  neuro_state_registry.h  neuro_unit.h  neuro_unit_app_api.h  neuro_unit_app_command.h  neuro_unit_diag.h  neuro_unit_dispatch.h  neuro_unit_event.h  neuro_unit_reply_context.h  neuro_unit_response.h  neuro_unit_update_service.h  neuro_unit_zenoh.h  neuro_update_manager.h
neuro_unit/include/port/: board_runtime_port.h  neuro_unit_port.h  neuro_unit_port_fs.h  neuro_unit_port_memory.h  neuro_unit_port_network.h
neuro_unit/include/runtime/: app_runtime.h  app_runtime_arch.h  app_runtime_cmd.h  app_runtime_elf_staging.h  app_runtime_exception.h  app_runtime_manifest.h
neuro_unit/include/shell/: neuro_unit_shell.h  neuro_unit_shell_internal.h
neuro_unit/overlays/: external_staging_candidate.conf  gpio_exec_alias_candidate.conf  gpio_exec_guard_candidate.conf  gpio_internal_staging_candidate.conf  gpio_llext_heap_trim_candidate.conf  heap_trim_candidate.conf  llext_dynamic_heap_candidate.conf  main_stack_trim_candidate.conf  net_buf_trim_candidate.conf  workqueue_stack_trim_candidate.conf
neuro_unit/src/: main.c  neuro_app_callback_bridge.c  neuro_app_command_registry.c  neuro_artifact_store.c  neuro_lease_manager.c  neuro_network_manager.c  neuro_protocol_codec.c  neuro_protocol_codec_cbor.c  neuro_recovery_seed_store.c  neuro_request_envelope.c  neuro_request_policy.c  neuro_state_registry.c  neuro_unit.c  neuro_unit_app_command.c  neuro_unit_diag.c  neuro_unit_dispatch.c  neuro_unit_event.c  neuro_unit_llext_exports.c  neuro_unit_response.c  neuro_unit_update_service.c  neuro_update_manager.c
neuro_unit/src/port/: neuro_unit_port_contract.c  neuro_unit_port_generic.c  neuro_unit_port_generic_dnesp32s3b.c
neuro_unit/src/runtime/: app_runtime.c  app_runtime_cmd.c  app_runtime_elf_staging.c  app_runtime_exception.c
neuro_unit/src/shell/: neuro_unit_shell.c  neuro_unit_shell_lifecycle.c  neuro_unit_shell_network.c  neuro_unit_shell_storage.c  neuro_unit_shell_zenoh.c
neuro_unit/src/zenoh/: neuro_unit_zenoh.c  neuro_unit_zenoh_config.c
neuro_unit/tests/unit/: CMakeLists.txt  Kconfig  TESTING.md  prj.conf  run_ut_coverage_from_windows.ps1  run_ut_coverage_linux.sh  run_ut_from_windows.ps1  run_ut_linux.sh  testcase.yaml
neuro_unit/tests/unit/src/app/: test_app_runtime_dispatch_mock.h  test_neuro_app_callback_bridge.c  test_neuro_app_command_registry.c  test_neuro_unit_app_api.c  test_neuro_unit_app_command.c  test_neuro_unit_event.c
neuro_unit/tests/unit/src/lifecycle/: test_neuro_lease_manager.c  test_neuro_state_registry.c  test_neuro_unit_diag.c  test_neuro_unit_dispatch.c  test_neuro_unit_response.c  test_neuro_unit_update_service.c  test_neuro_unit_zenoh_config.c  test_neuro_update_manager.c
neuro_unit/tests/unit/src/port/: test_neuro_network_manager_port.c  test_neuro_unit_port_fs_contract.c
neuro_unit/tests/unit/src/protocol/: test_neuro_protocol.c  test_neuro_protocol_codec.c
neuro_unit/tests/unit/src/recovery/: test_neuro_recovery_reconcile.c  test_neuro_recovery_seed_store.c
neuro_unit/tests/unit/src/request/: test_neuro_request_envelope.c  test_neuro_request_policy.c
neuro_unit/tests/unit/src/runtime/: test_app_runtime_cmd_capability.c  test_app_runtime_elf_staging.c
neurolink_core/: __init__.py  agents.py  autonomy.py  cli.py  common.py  data.py  events.py  federation.py  inference.py  maf.py  memory.py  tools.py  (+9 more)
(+150 files in other folders)
